CHANGES.txt - 08/01/2006
------------------------

CHANGES IN HTMLDOC v1.8.27

    BUG FIXES

	- Color changes were not reflected in PRE text (STR #129)
	- Remote URLs did not always work on older operating
	  systems (PR #6179)
	- Image filenames using % escapes were not decoded
	  properly.
	- Rows using BGCOLOR that spanned across multiple pages
	  did not render properly (PR #6149)
	- Rows no longer start on a new page due to a cell with
	  both HEIGHT and ROWSPAN specified (PR #6086)
	- CMYK JPEG images caused HTMLDOC to crash (PR #6106)
	- Table cell width calculations didn't always account for
	  the proper minimum width (STR #121)
	- Images were not copied when generating indexed HTML
	  output to a directory (STR #117)
	- Changing the bottom margin resulted in text that was
	  formatted below the bottom margin.
	- The Monospace-Oblique font was not embedded properly in
	  PDF files.


CHANGES IN HTMLDOC v1.8.26

    BUG FIXES

	- Outline and keyword strings in PDF files are now stored
	  as Unicode (STR #113)
	- The Flate compression code could get in an infinite
	  loop if it ran out of memory (STR #101)
	- Book files saved from the GUI did not handle filenames
	  with spaces (STR #105)
	- Fixed and re-enabled the ASCII85Device filter support
	  in PostScript Level 2/3 output (STR #116)
	- Character entities in the first word of a file were not
	  rendered properly (STR #111)
	- Fixed-size table columns were incorrectly resized when
	  a table width was also specified and there was extra
	  space to distribute (PR #6062)
	- Text could "walk" up or down when in-line images were
	  used (PR #6034)
	- Row backgrounds incorrectly replaced cell backgrounds
	  when the first cell in a row used ROWSPAN (PR #6033, PR
	  #6036)
	- HTMLDOC did not correctly parse FONT FACE attributes
	  (PR #6006)
	- Images in Level 2/3 PostScript output did not work on
	  some printers (PR #6000)
	- The GUI did not use the first page header (PR #5978)


CHANGES IN HTMLDOC v1.8.25
